[package]
name = "addressbase_pack"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rusqlite = { version = "0.23", features = ["bundled","chrono", "functions", "limits", "load_extension"] }
