[package]
name = "addresspack"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]
edition = "2018"
license = "./LICENCE"

[[bin]]
path = "src/main.rs"
name = "addresspack"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "=3.0.0-beta.1"
csv = "1.1"
indicatif = { version = "0.15", features = ["rayon"] }
itertools = "0.9"
r2d2 = "0.8"
r2d2_sqlite = "0.16"
rayon = "1.3"
rusqlite = { version = "0.23", features = ["bundled", "chrono", "functions", "limits", "load_extension"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zip = "0.5.6"
