[package]
name = "addresspack"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]
edition = "2018"
license = "./LICENCE"

[[bin]]
path = "src/main.rs"
name = "addresspack"

[dependencies]
clap = "=3.0.0-beta.2"
csv = "1.1"
indicatif = { version = "0.15" }
itertools = "0.10"
rusqlite = { version = "0.25", features = ["bundled", "functions", "limits", "load_extension"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
